# ancient-language-models

./: .gitignore  README.md  pyproject.toml
configs/: lemmatization-config.py  pos-config.py  unlabeled_parsing-config.py
src/ancient-language-models/: lemmatization.py  models.py  pos_tagging.py  unlabeled_parsing.py  utils.py
